--- a/forms_style.css
+++ b/forms_style.css
@@ -5,6 +5,7 @@ body {
   .form-wrapper {
     display: flex;
     justify-content: center;
+    margin-bottom: 500px;
   }
   
   form {
@@ -51,6 +52,7 @@ body {
   
   label {
     margin-bottom: 10px;
+    margin-top: 30px;
   }
   
   button {
